--- a/main/resources/view/Attendance.fxml
+++ b/main/resources/view/Attendance.fxml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.AttendanceController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="407.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.AttendanceController">
+   <children>
+      <HBox layoutY="36.0" prefHeight="374.0" prefWidth="50.0" style="-fx-background-color: #4576FF;" />
+      <VBox layoutX="-1.0" layoutY="-7.0" prefHeight="44.0" prefWidth="600.0" style="-fx-background-color: #4576FF;" />
+   </children>
 </AnchorPane>
