--- a/main/resources/view/Employee.fxml
+++ b/main/resources/view/Employee.fxml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.EmployeeController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.EmployeeController">
+   <children>
+      <VBox alignment="TOP_CENTER" layoutX="-2.6666666666666665" layoutY="14.0" prefHeight="380.0" prefWidth="754.0" spacing="15.0" style="-fx-background-color: #E8F5E9;" AnchorPane.bottomAnchor="136.0" AnchorPane.leftAnchor="-3.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="10.0">
+         <padding>
+            <Insets left="5.0" right="5.0" />
+         </padding>
+      </VBox>
+   </children>
+   <padding>
+      <Insets left="10.0" right="10.0" top="5.0" />
+   </padding>
 </AnchorPane>
