--- a/main/resources/view/Employee_Equipment.fxml
+++ b/main/resources/view/Employee_Equipment.fxml
@@ -1,14 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.Employee_EquipmentController"
-            prefHeight="400.0" prefWidth="600.0">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.Employee_EquipmentController">
 
+    <children>
+        <VBox alignment="TOP_CENTER" layoutX="50.0" layoutY="30.0" prefWidth="500" spacing="20.0">
+            <padding>
+                <Insets bottom="20" left="20" right="20" top="20" />
+            </padding>
+
+            <Label style="-fx-font-size: 20px; -fx-font-weight: bold;" text="Employee Equipment Assignment" />
+
+            <GridPane hgap="10" vgap="15">
+                <columnConstraints>
+                    <ColumnConstraints halignment="RIGHT" />
+                    <ColumnConstraints prefWidth="300" />
+                </columnConstraints>
+
+                <rowConstraints>
+                    <RowConstraints />
+                    <RowConstraints />
+                    <RowConstraints />
+                </rowConstraints>
+
+                <Label text="Assignment ID:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                <TextField fx:id="txtAssignmentId" promptText="EQA001" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+
+                <Label text="Employee ID:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                <TextField fx:id="txtEmployeeId" promptText="EMP001" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+
+                <Label text="Equipment ID:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                <TextField fx:id="txtEquipmentId" promptText="EQP001" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            </GridPane>
+
+            <HBox alignment="CENTER" spacing="15">
+                <Button fx:id="btnSave" prefWidth="100" text="Save" />
+                <Button fx:id="btnUpdate" prefWidth="100" text="Update" />
+                <Button fx:id="btnDelete" prefWidth="100" text="Delete" />
+                <Button fx:id="btnClear" prefWidth="100" text="Clear" />
+            </HBox>
+        </VBox>
+      <TableView layoutX="14.0" layoutY="272.0" prefHeight="200.0" prefWidth="559.0">
+        <columns>
+          <TableColumn prefWidth="75.0" text="C1" />
+          <TableColumn prefWidth="75.0" text="C2" />
+        </columns>
+      </TableView>
+    </children>
 </AnchorPane>
