--- a/main/resources/view/Equipment.fxml
+++ b/main/resources/view/Equipment.fxml
@@ -1,14 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.EquipmentController"
             prefHeight="400.0" prefWidth="600.0">
 
+    <children>
+        <VBox spacing="20" alignment="TOP_CENTER" layoutX="50.0" layoutY="30.0" prefWidth="500">
+            <padding>
+                <Insets top="20" right="20" bottom="20" left="20"/>
+            </padding>
+
+            <Label text="Equipment Management" style="-fx-font-size: 20px; -fx-font-weight: bold;"/>
+
+            <GridPane hgap="10" vgap="15">
+                <columnConstraints>
+                    <ColumnConstraints halignment="RIGHT"/>
+                    <ColumnConstraints prefWidth="300"/>
+                </columnConstraints>
+
+                <Label text="Equipment ID:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
+                <TextField fx:id="txtEquipmentId" promptText="EQP001" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+
+                <Label text="Equipment Name:" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
+                <TextField fx:id="txtEquipmentName" promptText="Printer, Scanner..." GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+
+                <Label text="Employee ID:" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
+                <TextField fx:id="txtEmployeeId" promptText="EMP001" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+            </GridPane>
+
+            <HBox spacing="15" alignment="CENTER">
+                <Button text="Save" fx:id="btnSave" prefWidth="100"/>
+                <Button text="Update" fx:id="btnUpdate" prefWidth="100"/>
+                <Button text="Delete" fx:id="btnDelete" prefWidth="100"/>
+                <Button text="Clear" fx:id="btnClear" prefWidth="100"/>
+            </HBox>
+        </VBox>
+    </children>
 </AnchorPane>
