--- a/main/resources/view/Salary.fxml
+++ b/main/resources/view/Salary.fxml
@@ -1,14 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.SalaryController"
-            prefHeight="400.0" prefWidth="600.0">
+            prefHeight="600.0" prefWidth="800.0">
 
+    <children>
+        <VBox spacing="20" alignment="TOP_CENTER" layoutX="20.0" layoutY="20.0" prefWidth="760.0">
+            <padding>
+                <Insets top="20" right="20" bottom="20" left="20"/>
+            </padding>
+
+            <Label text="Salary Management" style="-fx-font-size: 22px; -fx-font-weight: bold;"/>
+
+            <!-- Input Form -->
+            <GridPane hgap="10" vgap="12">
+                <columnConstraints>
+                    <ColumnConstraints halignment="RIGHT"/>
+                    <ColumnConstraints prefWidth="300"/>
+                </columnConstraints>
+
+                <Label text="Salary ID:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
+                <TextField fx:id="txtSalaryId" promptText="SAL001" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+
+                <Label text="Employee ID:" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
+                <TextField fx:id="txtEmployeeId" promptText="EMP001" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+
+                <Label text="Basic Salary:" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
+                <TextField fx:id="txtBasicSalary" promptText="50000.00" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+
+                <Label text="OT Hours:" GridPane.rowIndex="3" GridPane.columnIndex="0"/>
+                <TextField fx:id="txtOtHours" promptText="10" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
+
+                <Label text="Deduction:" GridPane.rowIndex="4" GridPane.columnIndex="0"/>
+                <TextField fx:id="txtDeduction" promptText="3000" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
+
+                <Label text="Deduction Type:" GridPane.rowIndex="5" GridPane.columnIndex="0"/>
+                <TextField fx:id="txtDeductionType" promptText="Tax / Loan" GridPane.rowIndex="5" GridPane.columnIndex="1"/>
+
+                <Label text="Net Salary:" GridPane.rowIndex="6" GridPane.columnIndex="0"/>
+                <TextField fx:id="txtNetSalary" promptText="Calculated" GridPane.rowIndex="6" GridPane.columnIndex="1"/>
+            </GridPane>
+
+            <!-- Buttons -->
+            <HBox spacing="15" alignment="CENTER">
+                <Button text="Save" fx:id="btnSave" prefWidth="100"/>
+                <Button text="Update" fx:id="btnUpdate" prefWidth="100"/>
+                <Button text="Delete" fx:id="btnDelete" prefWidth="100"/>
+                <Button text="Clear" fx:id="btnClear" prefWidth="100"/>
+            </HBox>
+
+            <!-- Table View -->
+            <TableView fx:id="tblSalary" prefHeight="250" prefWidth="750">
+                <columns>
+                    <TableColumn fx:id="colSalaryId" text="Salary ID" prefWidth="100"/>
+                    <TableColumn fx:id="colEmployeeId" text="Employee ID" prefWidth="100"/>
+                    <TableColumn fx:id="colBasicSalary" text="Basic Salary" prefWidth="100"/>
+                    <TableColumn fx:id="colOtHours" text="OT Hours" prefWidth="80"/>
+                    <TableColumn fx:id="colDeduction" text="Deduction" prefWidth="100"/>
+                    <TableColumn fx:id="colDeductionType" text="Deduction Type" prefWidth="120"/>
+                    <TableColumn fx:id="colNetSalary" text="Net Salary" prefWidth="120"/>
+                </columns>
+            </TableView>
+        </VBox>
+    </children>
 </AnchorPane>
