--- a/main/resources/view/User.fxml
+++ b/main/resources/view/User.fxml
@@ -1,14 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.UserController"
-            prefHeight="400.0" prefWidth="600.0">
+            prefHeight="600.0" prefWidth="800.0">
 
+    <children>
+        <VBox spacing="20" layoutX="20.0" layoutY="20.0" prefWidth="760.0">
+            <padding>
+                <Insets top="20" right="20" bottom="20" left="20"/>
+            </padding>
+
+            <Label text="User Management" style="-fx-font-size: 22px; -fx-font-weight: bold;" />
+
+            <!-- Input Fields -->
+            <GridPane hgap="10" vgap="12">
+                <columnConstraints>
+                    <ColumnConstraints halignment="RIGHT"/>
+                    <ColumnConstraints prefWidth="300"/>
+                </columnConstraints>
+
+                <Label text="User ID:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
+                <TextField fx:id="txtUserId" promptText="U001" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+
+                <Label text="User Name:" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
+                <TextField fx:id="txtUserName" promptText="John Doe" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+
+                <Label text="Mobile:" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
+                <TextField fx:id="txtMobile" promptText="07XXXXXXXX" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+
+                <Label text="Email:" GridPane.rowIndex="3" GridPane.columnIndex="0"/>
+                <TextField fx:id="txtEmail" promptText="example@email.com" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
+
+                <Label text="Role:" GridPane.rowIndex="4" GridPane.columnIndex="0"/>
+                <ComboBox fx:id="cmbRole" promptText="Admin / User / HR" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
+            </GridPane>
+
+            <!-- Buttons -->
+            <HBox spacing="15" alignment="CENTER">
+                <Button text="Save" fx:id="btnSave" prefWidth="100"/>
+                <Button text="Update" fx:id="btnUpdate" prefWidth="100"/>
+                <Button text="Delete" fx:id="btnDelete" prefWidth="100"/>
+                <Button text="Clear" fx:id="btnClear" prefWidth="100"/>
+            </HBox>
+
+            <!-- Table -->
+            <TableView fx:id="tblUser" prefHeight="250" prefWidth="750">
+                <columns>
+                    <TableColumn fx:id="colUserId" text="User ID" prefWidth="100"/>
+                    <TableColumn fx:id="colUserName" text="User Name" prefWidth="150"/>
+                    <TableColumn fx:id="colMobile" text="Mobile" prefWidth="120"/>
+                    <TableColumn fx:id="colEmail" text="Email" prefWidth="200"/>
+                    <TableColumn fx:id="colRole" text="Role" prefWidth="100"/>
+                </columns>
+            </TableView>
+        </VBox>
+    </children>
 </AnchorPane>
