--- a/main/resources/view/login.fxml
+++ b/main/resources/view/login.fxml
@@ -6,6 +6,8 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -19,15 +21,7 @@
          <effect>
             <DropShadow color="#00000055" radius="10.0" />
          </effect>
-
-         <Label text="Green Loop EMS" textFill="#11998e">
-            <font>
-               <Font size="24.0" />
-            </font>
-            <VBox.margin>
-               <Insets />
-            </VBox.margin>
-         </Label>
+         <Label text="Welcome Back" />
 
          <Label text="Login to your account" textFill="#333">
             <font>
@@ -46,6 +40,17 @@
          </padding>
 
       </VBox>
+
+      <Label layoutX="49.0" layoutY="19.0" textFill="#fdfdfd">
+         <font>
+            <Font name="Calibri Bold" size="24.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="378.0" fitWidth="257.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image />
+         </image>
+      </ImageView>
 
    </children>
 </AnchorPane>
