--- a/main/resources/view/Attendance.fxml
+++ b/main/resources/view/Attendance.fxml
@@ -1,6 +1,73 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 
+<AnchorPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.AttendanceController">
+    <children>
+        <Label layoutX="20" layoutY="20" style="-fx-font-size: 24px; -fx-font-weight: bold;" text="Attendance Management" />
 
-<AnchorPane prefHeight="407.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.AttendanceController" />
+        <GridPane hgap="20" layoutX="20" layoutY="70" vgap="15">
+            <columnConstraints>
+                <ColumnConstraints minWidth="120.0" />
+                <ColumnConstraints minWidth="200.0" />
+            </columnConstraints>
+
+            <rowConstraints>
+                <RowConstraints minHeight="30.0" />
+                <RowConstraints minHeight="30.0" />
+                <RowConstraints minHeight="30.0" />
+                <RowConstraints minHeight="30.0" />
+            <RowConstraints />
+            </rowConstraints>
+
+            <children>
+                <Label text="Attendance ID:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                <TextField fx:id="txtAttendanceId" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+
+                <Label text="Employee ID:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                <ComboBox fx:id="cmbEmployeeId" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+
+                <Label text="Date:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                <DatePicker fx:id="datePicker" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+
+                <Label text="Check In Time:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+                <TextField fx:id="txtCheckIn" promptText="HH:mm" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+
+                <Label text="Check Out Time:" GridPane.rowIndex="4" />
+                <TextField fx:id="txtCheckOut" promptText="HH:mm" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            </children>
+        </GridPane>
+
+              <!-- Buttons -->
+        <HBox layoutX="20" layoutY="300" spacing="15">
+            <Button fx:id="btnSave" prefWidth="80" text="Save" />
+            <Button fx:id="btnUpdate" prefWidth="80" text="Update" />
+            <Button fx:id="btnDelete" prefWidth="80" text="Delete" />
+            <Button fx:id="btnClear" prefWidth="80" text="Clear" />
+        </HBox>
+
+        <!-- TableView -->
+        <TableView fx:id="tblAttendance" layoutX="20" layoutY="350" prefHeight="130" prefWidth="760">
+            <columns>
+                <TableColumn fx:id="colAttendanceId" prefWidth="120" text="Attendance ID" />
+                <TableColumn fx:id="colEmployeeId" prefWidth="100" text="Employee ID" />
+                <TableColumn fx:id="colDate" prefWidth="120" text="Date" />
+                <TableColumn fx:id="colCheckIn" prefWidth="100" text="Check In" />
+                <TableColumn fx:id="colCheckOut" prefWidth="100" text="Check Out" />
+            </columns>
+        </TableView>
+      <Label layoutX="400.0" layoutY="254.0" text="Status:" />
+      <ComboBox layoutX="455.0" layoutY="250.0" prefWidth="150.0" />
+    </children>
+</AnchorPane>
