--- a/main/resources/view/Dashboard.fxml
+++ b/main/resources/view/Dashboard.fxml
@@ -1,10 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.DashboardController">
+<AnchorPane prefHeight="478.0" prefWidth="690.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.DashboardController">
    <children>
-      <VBox layoutY="-10.0" prefHeight="439.0" prefWidth="167.0" style="-fx-background-color: #16a085;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <!-- Sidebar -->
+      <VBox prefHeight="478.0" prefWidth="200.0" spacing="10" style="-fx-background-color: #16a085; -fx-padding: 20;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <ImageView fitHeight="134.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../../Downloads/GREEN%20LOOP.png" />
+               </image>
+            </ImageView>
+            <Button fx:id="btnEmployee" onAction="#employeeOnAction" prefWidth="160" style="-fx-background-color: #16a085;" text="Employee" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font></Button>
+            <Button fx:id="btnOT" onAction="#salaryOnAction" prefWidth="160" style="-fx-background-color: #16a085;" text="Salary" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font></Button>
+            <Button fx:id="btnTask" onAction="#taskOnAction" prefWidth="160" style="-fx-background-color: #16a085;" text="Task" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font></Button>
+            <Button fx:id="btnLeave" onAction="#leaveOnAction" prefWidth="160" style="-fx-background-color: #16a085;" text="Leave" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font></Button>
+            <Button fx:id="btnSalary" onAction="#otOnAction" prefWidth="160" style="-fx-background-color: #16a085;" text="OT" textFill="WHITE">
+               <font>
+                  <Font name="Arial Bold" size="14.0" />
+               </font></Button>
+            <Button fx:id="btnDeduction" onAction="#deductionOnAction" prefWidth="160" style="-fx-background-color: #16a085;" text="Deduction" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font></Button>
+            <Button fx:id="btnDepartment" prefWidth="160" style="-fx-background-color: #16a085;" text="Department" textFill="WHITE">
+               <font>
+                  <Font size="14.0" />
+               </font></Button>
+            <Button fx:id="btnPosition" prefWidth="160" style="-fx-background-color: #16a085;" text="Position" />
+            <Button fx:id="btnEmployeeEquipment" prefWidth="160" style="-fx-background-color: #16a085;" text="Employee Equipment" />
+            <Button fx:id="btnAttendance" prefWidth="160" style="-fx-background-color: #16a085;" text="Attendance" />
+            <Button fx:id="btnUser" prefWidth="160" style="-fx-background-color: #16a085;" text="User" />
+            <Button mnemonicParsing="false" prefWidth="160.0" style="-fx-background-color: #16a085;" text=" Settings" textFill="#e4ff37">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Button>
+         </children>
+      </VBox>
+
+      <!-- Main Content Area (to be loaded dynamically in Controller) -->
+      <AnchorPane fx:id="contentPane" layoutX="200.0" prefWidth="700.0" style="-fx-background-color: #ecf0f1;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      </AnchorPane>
    </children>
 </AnchorPane>
