--- a/main/resources/view/Department.fxml
+++ b/main/resources/view/Department.fxml
@@ -1,91 +1,99 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0"
-            xmlns="http://javafx.com/javafx/23.0.1"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.DepartmentController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.DepartmentController">
 
-    <VBox alignment="TOP_CENTER" spacing="15.0" style="-fx-background-color: #2980b9;"
-          AnchorPane.topAnchor="10.0" AnchorPane.bottomAnchor="10.0"
-          AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
+    <VBox alignment="TOP_CENTER" layoutX="-2.0" prefHeight="399.0" prefWidth="740.0" spacing="15.0" style="-fx-background-color: #16a085;" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="-2.0" AnchorPane.rightAnchor="-4.0" AnchorPane.topAnchor="0.0">
 
-        <!-- Logo -->
-        <ImageView fitHeight="39.0" fitWidth="63.0" preserveRatio="true" pickOnBounds="true">
+
+        <ImageView fitHeight="39.0" fitWidth="63.0" pickOnBounds="true" preserveRatio="true">
             <VBox.margin>
-                <Insets left="600.0" top="5.0"/>
+                <Insets left="600.0" top="5.0" />
             </VBox.margin>
             <image>
-                <Image url="@../../../../../../Downloads/GREEN%20LOOP.png"/>
+                <Image url="@../../../../../../Downloads/GREEN%20LOOP.png" />
             </image>
         </ImageView>
 
-        <!-- Title -->
-        <Label text="Department Management" textFill="WHITE"
-               style="-fx-font-size: 20px; -fx-font-weight: bold;">
+
+        <Label style="-fx-font-size: 20px; -fx-font-weight: bold;" text="Department Management" textFill="WHITE">
             <font>
-                <Font size="14.0"/>
+                <Font size="14.0" />
             </font>
         </Label>
 
-        <!-- Input Fields -->
+
         <GridPane hgap="10.0" vgap="10.0">
             <columnConstraints>
-                <ColumnConstraints halignment="RIGHT" minWidth="120.0"/>
-                <ColumnConstraints minWidth="300.0"/>
-                <ColumnConstraints minWidth="300.0"/>
+                <ColumnConstraints halignment="RIGHT" minWidth="120.0" />
+                <ColumnConstraints minWidth="300.0" />
+                <ColumnConstraints minWidth="300.0" />
             </columnConstraints>
 
-            <!-- Department ID -->
-            <Label text="Department ID:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-            <TextField fx:id="txtDepartmentId" promptText="Enter Department ID"
-                       GridPane.rowIndex="0" GridPane.columnIndex="1"/>
 
-            <!-- Department Name -->
-            <Label text="Department Name:" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-            <TextField fx:id="txtDepartmentName" promptText="Enter Department Name"
-                       GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+            <Label text="Department ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="0">
+            <font>
+               <Font name="System Bold" size="12.0" />
+            </font></Label>
+            <TextField fx:id="txtDepartmentId" promptText="Enter Department ID" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
-            <!-- Employee ID -->
-            <Label text="Employee ID:" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
-            <TextField fx:id="txtEmployeeId" promptText="Enter Employee ID"
-                       GridPane.rowIndex="2" GridPane.columnIndex="1"/>
 
-            <!-- Search -->
-            <Button fx:id="btnSearch" text="Search"
-                    style="-fx-background-color: #FFC107;"
-                    prefWidth="89.0" prefHeight="25.0"
-                    GridPane.rowIndex="2" GridPane.columnIndex="2">
+            <Label text="Department Name:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
+            <font>
+               <Font name="System Bold" size="12.0" />
+            </font></Label>
+            <TextField fx:id="txtDepartmentName" promptText="Enter Department Name" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+
+
+            <Label text="Employee ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="2">
+            <font>
+               <Font name="System Bold" size="12.0" />
+            </font></Label>
+            <TextField fx:id="txtEmployeeId" promptText="Enter Employee ID" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+
+
+            <Button fx:id="btnSearch" prefHeight="25.0" prefWidth="89.0" style="-fx-background-color: #FFC107;" text="Search" GridPane.columnIndex="2" GridPane.rowIndex="2">
                 <font>
-                    <Font name="System Bold" size="13.0"/>
+                    <Font name="System Bold" size="13.0" />
                 </font>
             </Button>
+         <rowConstraints>
+            <RowConstraints />
+            <RowConstraints />
+            <RowConstraints />
+         </rowConstraints>
         </GridPane>
 
-        <!-- Buttons -->
+
         <HBox alignment="CENTER" spacing="10.0">
-            <Button fx:id="btnAdd" text="Add"
-                    style="-fx-background-color: #4CAF50; -fx-text-fill: white;"
-                    prefWidth="89.0" prefHeight="25.0"/>
-            <Button fx:id="btnUpdate" text="Update"
-                    style="-fx-background-color: #2196F3; -fx-text-fill: white;"
-                    prefWidth="89.0" prefHeight="25.0"/>
-            <Button fx:id="btnDelete" text="Delete"
-                    style="-fx-background-color: #f44336; -fx-text-fill: white;"
-                    prefWidth="89.0" prefHeight="25.0"/>
+            <Button fx:id="btnAdd" prefHeight="25.0" prefWidth="89.0" style="-fx-background-color: #4CAF50; -fx-text-fill: white;" text="Add" />
+            <Button fx:id="btnUpdate" prefHeight="25.0" prefWidth="89.0" style="-fx-background-color: #2196F3; -fx-text-fill: white;" text="Update" />
+            <Button fx:id="btnDelete" prefHeight="25.0" prefWidth="89.0" style="-fx-background-color: #f44336; -fx-text-fill: white;" text="Delete">
+            <font>
+               <Font name="System Bold" size="12.0" />
+            </font></Button>
         </HBox>
 
-        <!-- Table -->
+
         <TableView fx:id="tblDepartment" prefHeight="200.0" prefWidth="580.0">
             <columns>
-                <TableColumn fx:id="colDepartmentId" text="Department ID" prefWidth="200.0"/>
-                <TableColumn fx:id="colDepartmentName" text="Department Name" prefWidth="350.0"/>
+                <TableColumn fx:id="colDepartmentId" prefWidth="200.0" text="Department ID" />
+                <TableColumn fx:id="colDepartmentName" prefWidth="350.0" text="Department Name" />
             </columns>
         </TableView>
 
